# redbox

./: .env.example  .env.local  .env.local.example  .envrc.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  Makefile  Procfile  README.md  SECURITY_CHECKLIST.md  aws-login.sh  dev.sh  docker-compose.yml  mkdocs.yml  personal-data-exclusions.txt  pyproject.toml  read_local_opensearch.ipynb
data_hub_mcp/: .env  .env.integration  .env.local  Dockerfile  data_classes.py  data_classes_prop.py  db_ops.py  db_ops_prop.py  exceptions.py  fashmcp.json  importers.py  log.py  mcp_client.py  mcp_client_parameterised.py  mcp_client_prop.py  mcp_server.py  mcp_server_prop.py  mcp_server_test.py  pyproject.toml  readme.md  requirements.txt  run_ingest.py  run_mcp_client.py  run_mcp_server.py  sa_models.py  static_data.py
data_hub_mcp/data/: companies.csv  companies_old.csv  company_interactions.csv  investment_projects.csv  objectives.csv
data_hub_mcp/etl/: importers.py  run_ingest.py
data_hub_mcp/experiments/nested/: data_classes.py  db_ops.py  db_ops_prop.py  mcp_server.py  mcp_server_prop.py
data_hub_mcp/repository/: __init__.py  base.py  postgres.py  static.py
data_hub_mcp/tests/: test_auth.py  test_importers.py  test_mcp_server.py
data_hub_mcp/util/: logging.py
django_app/: Dockerfile  LLM_rephrasing_investigation.ipynb  README.md  build_react.ipynb  health.sh  manage.py  oritem8.txt  pyproject.toml  start-aws.sh  start.sh
django_app/frontend/: package.json  staticfiles.json
django_app/frontend/src/: chat-styles.scss  iai-overrides.scss  styles.scss  typography.scss  variables.scss
django_app/frontend/src/animations/: animation _1722611146876.json
django_app/frontend/src/interaction_design_system/: _index.scss
django_app/frontend/src/js/: base.js  chats.js  csrftoken.js  custom-events.md  main.js  (+3 more)
django_app/frontend/tests-web-components/: canned-prompts.spec.js  chat-history.spec.js  chat-title.spec.js  copy-text.spec.js  document-selector.spec.js  file-status.spec.js  message-input.spec.js  upload-button.spec.js  utils.js
django_app/redbox_app/: backends.py  jinja2.py  logging.py  setting_enums.py  settings.py  storage.py  urls.py  worker.py  wsgi.py
django_app/redbox_app/redbox_core/: admin.py  apps.py  consumers.py  error_messages.py  flags.py  forms.py  middleware.py  models.py  serializers.py  signals.py  state.py  types.py  utils.py
django_app/redbox_app/templates/: accessibility-statement.html  base.html  chats.html  citation_fragment.html  citations.html  demographics.html  document-help-text.html  documents.html  faq.html  header-nav.html  homepage.html  privacy-notice-uktrade.html  privacy-notice.html  remove-all-docs.html  remove-doc.html  sign-in-link-sent.html  sign-in.html  sign-up-page-1.html  sign-up-page-2.html  sign-up-page-3.html  sign-up-page-4.html  sign-up-page-5.html  sign-up-page-6.html  sign-up-page-7.html  signed-out.html  sitemap.html  support.html  upload.html  upload_form.html
django_app/static/: main.css  service-header.css
django_app/tests/: conftest.py  test_admin.py  test_api.py  test_app.py  test_backend.py  test_consumers.py  test_jinja2.py  test_migrations.py  test_models.py  test_signals.py  test_utils.py
django_app/tests/management/: test_commands.py
django_app/tests/models/: test_agent_model.py  test_agentskill_model.py  test_agenttool_model.py  test_chat_model.py  test_chatmessage_model.py  test_citation_model.py  test_fileskill_model.py  test_filetool_model.py  test_skill_model.py  test_team_model.py  test_tool_model.py  test_user_model.py
django_app/tests/services/: test_chats_service.py  test_documents_service.py  test_message_service.py  test_teams_service.py  test_url_service.py
django_app/tests/views/: test_api_views.py  test_auth_views.py  test_chat_views.py  test_citation_views.py  test_demographic_views.py  test_document_views.py  test_misc_views.py  test_ratings_views.py  test_settings_views.py  test_skills_views.py  test_team_views.py  test_tools_views.py
file_processor/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
redbox/: pyproject.toml
redbox-core/: pyproject.toml
redbox-core/redbox/: app.py  transform.py
redbox-core/redbox/api/: format.py
redbox-core/redbox/chains/: components.py  parser.py  runnables.py
redbox-core/redbox/graph/: edges.py  root.py
redbox-core/redbox/loader/: ingester.py  loaders.py
redbox-core/redbox/models/: chain.py  chat.py  file.py  graph.py  prompts.py  settings.py
redbox-core/redbox/retriever/: __init__.py  queries.py  retrievers.py
redbox-core/redbox/test/: data.py
redbox-core/tests/: conftest.py  test_ingest.py  test_tools.py  test_transform.py
redbox-core/tests/graph/: test_app.py  test_patterns.py
redbox-core/tests/retriever/: test_retriever.py
redbox/api/: format.py
redbox/chains/: components.py
redbox/graph/nodes/: sends.py
redbox/redbox/: __init__.py  app.py  transform.py
redbox/redbox/agents/: agents.py  configs.py
redbox/redbox/api/: callbacks.py  format.py  health.py  wrapper.py
redbox/redbox/chains/: activity.py  components.py  ingest.py  parser.py  runnables.py
redbox/redbox/graph/: edges.py  root.py
redbox/redbox/loader/: ingester.py  loaders.py
redbox/redbox/models/: __init__.py  chain.py  chat.py  file.py  graph.py  prompts.py  settings.py
redbox/redbox/retriever/: __init__.py  perf_queries.py  perf_queries_threaded.py  queries.py  retrievers.py
redbox/redbox/test/: data.py
redbox/tests/: conftest.py  test_chains.py  test_ingest.py  test_stream_throughput.py  test_tools.py  test_transform.py
redbox/tests/api/: test_callback.py  test_format.py  test_wrapper.py
redbox/tests/graph/: test_app.py  test_fallback_llm.py  test_multiagents_app.py  test_patterns.py  test_root.py  test_state.py
redbox/tests/parser/: callbacks.py  plot2.py  plot_chains.py  plot_llm_throughput.py  plot_stream_throughput.py  plot_stream_throughput_async.py  plot_util.py
redbox/tests/retriever/: data.py  test_retriever.py
redbox_ai_service/: Dockerfile  config.py  main.py  pyproject.toml
(+532 files in other folders)
