[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "redbox-root"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["DBT Redbox <redbox@businessandtrade.gov.uk>", "i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django-staff-sso-client = "^4.3.0"
dbt-copilot-python = "^1.1.0"
uwotm8 = "^0.1.6"
detect-secrets = "^1.5.0"
ddtrace = "^3.14.0"
django-log-formatter-asim = "^1.1.0"
django-requestlogs = "^0.8"
openpyxl = "^3.1.5"
coverage = "^7.10.6"

[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
pytest = "^8.4.2"
pytest-env = "^1.1.1"
pytest-mock = "^3.15.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.13.0"
bandit = "^1.8.6"
detect-secrets = "^1.5.0"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.9.0.20250906"
types-pytz = "^2024.1.0.20240203"
boto3-stubs = {extras = ["essential"], version = "^1.40.30"}
moto = {extras = ["s3"], version = "^5.1.12"}
playwright = "^1.55"
pytest-playwright = "^0.7"
axe-playwright-python = "^0.1"
websockets = "^12.0"
httpx = "^0.28.1"
minio = "^7.2.16"
yarl = "^1.9.4"
ipykernel = "^6.30.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-material = "^9.6.19"
mkdocs-mermaid2-plugin = "^1.2.2"
markdown-mdantic = "^2.1.0"
pygments = "^2.18.0"
mkapi = "^2.1.0"
griffe-typingdoc = "^0.2.9"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"
mkdocs-glightbox = "^0.5.1"
mkdocs-minify-plugin = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
exclude = ["django_app/redbox_app/redbox_core/migrations/*.py"]

[tool.ruff.lint]
# Dribble in those we have commented out, asterisked ones first
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ARG",
    "ASYNC",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "EXE",
    "FURB",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = ["django_app/redbox_app/redbox_core/migrations/*.py", "out/*"]
ignore = ["COM812", "DJ001", "RET505", "RET508", "PLR0913", "ISC001"]

[tool.ruff.lint.isort]
known-first-party = ["redbox_app", "redbox", "core_api"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003"]
"django_app/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]
"worker/*" = ["B008"]
"redbox/*" = ["TCH003"]
"redbox/tests/*" = ["ARG001"]
"*/admin.py" = ["RUF012"]
"*/models.py" = ["RUF012"]
