[tool.poetry]
name = "redbox_app"
version = "0.5.0"
description = ""
authors = ["DBT Redbox <redbox@businessandtrade.gov.uk>", "i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
redbox = {path="../redbox", develop=true}
django = "5.2.8"
django-libsass = "^0.9"
django-magic-link = "^1.0.0"
whitenoise = "^6.11.0"
watchdog = {extras = ["watchmedo"], version = "^4.0.2"}
jinja2 = "3.1.6"
django-environ = "^0.12.0"
django-use-email-as-username = "^1.4.0"
markdown-it-py = "^3.0.0"
psycopg2-binary = "^2.9.11"
pyyaml = "^6.0.3"
pytz = "^2024.1"
django-permissions-policy = "^4.28.0"
django-csp = "^3.7"
django-single-session = "^0.2.0"
sentry-sdk = {extras = ["django"], version = "^2.43.0"}
django-storages = "^1.14.2"
boto3 = "^1.40.70"
urllib3 = "2.5.0"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
yarl = "^1.22.0"
humanize = "^4.14.0"
channels = {extras = ["daphne"], version = "^4.3.1"}
django-gov-notify = "^0.6.0"
websockets = "^10.0"
django-import-export = "^4.3"
django-q2 = "^1.6.2"
blessed = "^1.23.0"
croniter = "^3.0.3"
djangorestframework = "^3.16.1"
django-plotly-dash = "^2.5.0"
django-adminplus = "^0.6"
pandas = "^2.3.3"
django-waffle = "^4.1.0"
opensearch-py = "^2.7.1"
scikit-learn = "^1.7.2"
django-staff-sso-client = "^4.3.0"
dj-database-url = "^2.3.0"
dbt-copilot-python = "^0.2.2"
django-log-formatter-asim = "^1.1.0"
django-chunk-upload-handlers = "^0.0.15"
mohawk = "^1.1.0"
uwotm8 = "^0.1.6"
pymupdf = "^1.26.6"
openpyxl = "^3.1.5"
ddtrace = "^3.18.1"
django-requestlogs = "^0.8"
unoserver = "^3.4"
coverage = "^7.11.3"
python-slugify = "^8.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-env = "^1.2.0"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3"
pylint = "^3.2.6"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.10.0.20251106"
ruff = "^0.14.4"
python-dotenv = "^1.2.1"
pre-commit = "^3.6.2"
freezegun = "^1.5.5"
bandit = "^1.8.6"
django-types = "^0.22.0"
detect-secrets = "^1.4.0"
types-pytz = "^2024.1.0.20240203"
boto3-stubs = "^1.40.70"
requests-mock = "^1.12.1"
django-test-migrations = "^1.3.0"
beautifulsoup4 = "^4.14"
gevent = "^24.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "redbox_app.settings"
testpaths = "tests"
norecursedirs = "tests/test_ai.py"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
