[tool.poetry]
name = "redbox_app"
version = "0.5.0"
description = ""
authors = ["DBT Redbox <redbox@businessandtrade.gov.uk>", "i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
django_log_formatter_asim = "^1.3.0"
python = ">=3.12,<3.13"
redbox = {path="../redbox", develop=true}
django = "5.2.12"
django-libsass = "^0.9"
django-magic-link = "^1.2.0"
whitenoise = "^6.12.0"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}
jinja2 = "3.1.6"
django-environ = "^0.12.1"
django-use-email-as-username = "^1.4.0"
markdown-it-py = "^3.0.0"
psycopg2-binary = "^2.9.11"
pyyaml = "^6.0.3"
pytz = "^2024.1"
django-permissions-policy = "^4.29.0"
django-csp = "^3.7"
django-single-session = "^0.2.0"
sentry-sdk = {extras = ["django"], version = "^2.57.0"}
django-storages = "^1.14.2"
boto3 = "^1.42.88"
urllib3 = "2.6.3"
requests = "^2.33.1"
python-dotenv = "^1.2.2"
yarl = "^1.23.0"
humanize = "^4.15.0"
channels = {extras = ["daphne"], version = "^4.3.2"}
django-gov-notify = "^0.6.0"
websockets = "^16.0"
django-import-export = "^4.4"
django-q2 = "^1.9.0"
blessed = "^1.38.0"
croniter = "^6.2.2"
djangorestframework = "^3.17.1"
django-plotly-dash = "^2.5.0"
django-adminplus = "^0.6"
pandas = "^2.3.3"
django-waffle = "^4.1.0"
opensearch-py = "^2.7.1"
scikit-learn = "^1.8.0"
django-staff-sso-client = "^5.2.0"
dj-database-url = "^3.1.2"
dbt-copilot-python = "^2.1.0"
django-log-formatter-asim = "^1.3.0"
django-chunk-upload-handlers = "^0.0.15"
mohawk = "^1.1.0"
uwotm8 = "^0.1.6"
pymupdf = "^1.27.2"
openpyxl = "^3.1.5"
ddtrace = "^3.19.5"
django-requestlogs = "^0.8"
unoserver = "^3.6"
coverage = "^7.13.5"
python-slugify = "^8.0.4"
duckdb = "^1.5.1"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.12.0"
pytest-env = "^1.2.0"
pytest-mock = "^3.15.1"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.3"
pylint = "^4.0.5"
types-python-dateutil = "^2.9.0.20260408"
types-markdown = "^3.10.2.20260211"
ruff = "^0.15.10"
python-dotenv = "^1.2.2"
pre-commit = "^4.5.1"
freezegun = "^1.5.5"
bandit = "^1.9.4"
django-types = "^0.23.0"
detect-secrets = "^1.4.0"
types-pytz = "^2025.2.0.20251108"
boto3-stubs = "^1.42.88"
requests-mock = "^1.12.1"
django-test-migrations = "^1.3.0"
beautifulsoup4 = "^4.14"
gevent = "^24.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "redbox_app.settings"
testpaths = "tests"
norecursedirs = "tests/test_ai.py"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
