[tool.poetry]
name = "file_processor"
version = "0.0.1"
description = ""
authors = ["Natasha Boyse <natasha.boyse@digital.trade.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
minio = "^7.2.8"
python-multipart = "^0.0.9"
boto3 = "^1.34.160"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23"
pylint = "^3.2.6"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.6.0.20240316"
ruff = "^0.5.7"
python-dotenv = "^1.0.1"
pre-commit = "^3.6.2"
freezegun = "^1.2.2"
bandit = "^1.7.8"
django-types = "^0.19.1"
detect-secrets = "^1.4.0"
types-pytz = "^2024.1.0.20240203"
boto3-stubs = "^1.34.160"
requests-mock = "^1.12.1"
django-test-migrations = "^1.3.0"
beautifulsoup4 = "^4.12"
gevent = "^24.10.2"
boto3 = "^1.34.160"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "redbox_app.settings"
testpaths = "tests"
norecursedirs = "tests/test_ai.py"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
