[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "redbox"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["DBT Redbox <redbox@businessandtrade.gov.uk>", "i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.1"
elasticsearch = "^8.15.0"
langchain-community = ">0.2.12"
langchain = "^0.3.4"
langchain_openai = ">0.1.21"
boto3 = "^1.34.160"
pydantic-settings = "^2.3.4"
langchain-elasticsearch = ">0.2.2"
pytest-dotenv = "^0.5.2"
kneed = "^0.8.5"
langgraph = "^0.2.39"
langchain-aws = "^0.2.3"
wikipedia = "^1.4.0"
opensearch-py = "^2.7.1"
scikit-learn = "^1.5.2"
django-environ = "^0.12.0"
mohawk = "^1.1.0"
django-waffle = "^4.2.0"
langchain-mcp-adapters = "^0.0.11"
pymupdf = "^1.26.0"
jwt = "^1.4.0"
deepeval = "^3.1.8"
dbt-copilot-python = "^1.1.0"
pandas = "^2.3.0"
django-log-formatter-asim = "^1.0.0"
import-export = "^0.3.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
moto = "^5.0.12"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
jsonlines = "^4.0.0"
deepeval = "^3.1.8"
pytest-mock = "^3.14.0"
boto3-stubs = {extras = ["essential"], version = "^1.35.28"}
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
markers = [
    "ai: marks tests as using a live LLM (deselect with '-m \"not ai\"')",
    "vcr",
]
