[tool.ruff]
line-length = 120
target-version = "py312"

[tool.poetry]
name = "redbox"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = [
    "DBT Redbox <redbox@businessandtrade.gov.uk>",
    "i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"
]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

pydantic = "^2.7"
pydantic-settings = "^2.3"

langchain = "^1.2"
langchain-community = "^0.4.1"
langchain-openai = "^1.1"
langchain-aws = "^1.0.0"
langchain-elasticsearch = "^1.0.0"
langgraph = "^1.1"

elasticsearch = "^8.15"
opensearch-py = "^2.7"

boto3 = "^1.34"

starlette = "^0.49"

django = "^5.2"
django-environ = "^0.12"
django-waffle = "^4.2"
django-requestlogs = "^0.8"
django-log-formatter-asim = "^1.3"

pandas = "^2.3"
scikit-learn = "^1.5"
duckdb = "^1.4"
pymupdf = "^1.26"
kneed = "^0.8"

mcp = "^1.7.1"

wikipedia = "^1.4"
mohawk = "^1.1"
ddtrace = "^3.10"

urllib3 = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-dotenv = "^0.5"
pytest-mock = "^3.14"
requests-mock = "^1.12"

moto = "^5.0"
jsonlines = "^4.0"
deepeval = "^3.8"

boto3-stubs = { extras = ["essential"], version = "^1.35" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
markers = [
    "ai: marks tests as using a live LLM (deselect with '-m \"not ai\"')",
    "vcr",
]
